fix: improve pixel perfect for main page on mobile

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,6 +1,6 @@
 .advantages__header {
   margin: 0 auto;
-  padding: 32px 18px 0;
+  padding: 34px 18px 0;
 
   @media (min-width: @tablet) {
     padding-top: 48px;
@@ -38,7 +38,7 @@
 .advantages__container {
   position: relative;
   box-sizing: border-box;
-  padding: 35px 25px 35px;
+  padding: 37px 25px 37px;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -73,7 +73,7 @@
   }
 
   &--smaller {
-    padding: 25px 35px 25px;
+    padding: 24px 35px 25px;
 
     @media (min-width: @tablet) {
       padding: 41px 33px;
@@ -85,7 +85,7 @@
   }
 
   &--inner {
-    padding: 22px 18px 0 70px;
+    padding: 26px 18px 0 65px;
     align-items: flex-start;
     text-align: start;
 
@@ -108,8 +108,8 @@
   &--inner::before {
     content: "";
     position: absolute;
-    top: 22px;
-    left: 20px;
+    top: 23px;
+    left: 19px;
     width: 40px;
     height: 40px;
 
@@ -127,8 +127,16 @@
     background: url("../img/advantages/icon-house.svg") center/contain no-repeat;
   }
 
+  &--inner--food {
+    padding-left: 70px;
+  }
+
   &--inner--food::before {
     background: url("../img/advantages/icon-food.svg") center/contain no-repeat;
+  }
+
+  &--inner--present {
+    padding-left: 63px;
   }
 
   &--inner--present::before {
@@ -148,6 +156,7 @@
   display: block;
   width: 100%;
   object-fit: cover;
+  height: 260px;
 
   @media (min-width: @tablet) {
     position: absolute;
