--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,5 +1,5 @@
 .footer {
-  padding: 29px 20px 20px;
+  padding: 28px 20px 20px;
 
   @media (min-width: @tablet) {
     padding: 36px 50px 30px;
@@ -21,9 +21,9 @@
 
 .footer__title {
   display: block;
+  margin-bottom: 23px;
   padding: 10px;
   max-width: 200px;
-  margin-bottom: 34px;
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
@@ -46,9 +46,13 @@
 }
 
 .footer__socials {
-  margin: 0 0 34px 6px;
+  margin: 0 0 28px 10px;
 
   @media (min-width: @tablet) {
     margin: 0;
   }
+}
+
+.footer__copyright {
+  margin-left: -5px;
 }
