--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,5 +1,5 @@
 .intro {
-  padding: 90px 20px 85px;
+  padding: 90px 20px 86px;
   box-sizing: border-box;
   width: 100%;
   background: url("../img/intro/intro-triangle-1.svg") bottom no-repeat,
