--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -1,6 +1,6 @@
 .search__header {
   margin: 0 auto;
-  padding: 38px 20px 49px;
+  padding: 40px 20px 49px;
 
   @media (min-width: @tablet) {
     padding: 61px 0 58px;
