--- a/source/less/blocks/text-block.less
+++ b/source/less/blocks/text-block.less
@@ -56,6 +56,7 @@
 
   &--search {
     @media (max-width: (@tablet - 1px)) {
+      margin-bottom: 22px;
       font-size: 21px;
     }
   }
